crates/cherry-pit-web/tests/compile_fail/wire_not_deserialize_owned.stderr
error[E0277]: the trait bound `W: serde::Deserialize<'de>` is not satisfied
   --> tests/compile_fail/wire_not_deserialize_owned.rs:109:17
    |
109 |     type Wire = W;
    |                 ^ unsatisfied trait bound
    |
help: the trait `for<'de> Deserialize<'de>` is not implemented for `W`
   --> tests/compile_fail/wire_not_deserialize_owned.rs:103:1
    |
103 | struct W;
    | ^^^^^^^^
    = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `W` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Deserialize<'de>`:
              &'a Path
              &'a [u8]
              &'a serde_json::raw::RawValue
              &'a str
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
            and $N others
    = note: required for `<R as CommandRouter>::Wire` to implement `DeserializeOwned`
note: required by a bound in `cherry_pit_web::CommandRouter::Wire`
   --> src/command_router.rs
    |
    |     type Wire: DeserializeOwned + Send + 'static;
    |                ^^^^^^^^^^^^^^^^ required by this bound in `CommandRouter::Wire`
